First commit under Zerek ownership. Version updates and code cleanup