@@ -1,6 +1,6 @@
-package com.wasted_ticks.feathereconomy.commands.completers;
+package dev.zerek.feathereconomy.commands;
 
-import com.wasted_ticks.feathereconomy.FeatherEconomy;
+import dev.zerek.feathereconomy.FeatherEconomy;
 import org.bukkit.Material;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
@@ -15,12 +15,12 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-public class DepositCompleter implements TabCompleter {
+public class DepositTabCompleter implements TabCompleter {
 
 
     private final FeatherEconomy plugin;
 
-    public DepositCompleter(FeatherEconomy plugin) {
+    public DepositTabCompleter(FeatherEconomy plugin) {
         this.plugin = plugin;
     }
 
@@ -32,19 +32,22 @@ public class DepositCompleter implements TabCompleter {
             ArrayList<String> suggestions = new ArrayList<>();
 
             if(sender instanceof Player) {
+
                 Player player = (Player) sender;
+
                 Integer amount = 0;
+
                 for(ItemStack stack : player.getInventory().getContents()) {
-                    if(stack != null && stack.getType().equals(Material.LAPIS_LAZULI)) {
-                        amount += stack.getAmount();
-                    }
+
+                    if(stack != null && stack.getType().equals(Material.LAPIS_LAZULI)) amount += stack.getAmount();
                 }
-                if(amount != 0) {
-                    StringUtil.copyPartialMatches(args[0], new ArrayList<String>(Arrays.asList(String.valueOf(amount))), suggestions);
-                }
+
+                if(amount != 0) StringUtil.copyPartialMatches(args[0], new ArrayList<>(List.of(String.valueOf(amount))), suggestions);
             }
+
             return suggestions;
         }
+
         return null;
     }
 }
